--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/is-prop-valid": "latest",
     "@google/genai": "^0.8.0",
     "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -41,35 +42,42 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node-fetch": "^2.6.12",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "crypto": "latest",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "framer-motion": "latest",
+    "formidable": "^3.5.4",
+    "framer-motion": "^12.8.0",
+    "fs-extra": "^11.3.0",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
-    "react": "^19",
+    "react": "18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.5.2",
+    "react-modal": "^3.16.3",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^4.2.21",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
+    "static-ffmpeg": "^3.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
@@ -78,9 +86,14 @@
   },
   "devDependencies": {
     "@gradio/client": "^1.14.2",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/formidable": "^3.4.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.14.1",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.15",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.1",
     "postcss": "^8",
